--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "catbox-crypto",
   "description": "Ephemeral encryption layer for catbox cache strategy engines.",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "author": "Andrew Livesay <andrew.livesay@gmail.com>",
   "repository": "https://github.com/alivesay/catbox-crypto",
   "main": "index",
@@ -15,14 +15,15 @@
   },
   "dependencies": {
     "hoek": "1.x.x",
-    "random-enough": "1.x.x"
-  },
-  "peerDependencies": {
-    "catbox": "2.x.x",
+    "random-enough": "1.x.x",
     "catbox-memory": "1.x.x"
   },
+  "peerDependencies": {
+    "catbox": "2.x.x"
+  },
   "devDependencies": {
-    "mocha": "1.x.x"
+    "mocha": "1.x.x",
+    "catbox": "2.x.x"
   },
   "scripts": {
     "test": "mocha"
