--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
     "crypto"
   ],
   "engines": {
-    "node": ">=0.10.26"
+    "node": ">=0.10.37"
   },
   "dependencies": {
-    "hoek": "2.x.x",
-    "random-enough": "1.x.x",
-    "catbox-memory": "1.x.x"
+    "catbox-memory": "1.x.x",
+    "hoek": "2.11.1",
+    "random-enough": "1.x.x"
   },
   "peerDependencies": {
-    "catbox": "3.x.x"
+    "catbox": "4.x.x"
   },
   "devDependencies": {
-    "mocha": "1.x.x",
-    "catbox": "3.x.x"
+    "mocha": "2.x.x",
+    "catbox": "4.x.x"
   },
   "scripts": {
     "test": "mocha"
